Elastic Search baseProduct migration eklendi
